bk_ida/gccida/g0/build_cfa_loc
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_cfa_loc/src/dwarf2out.c:3397:25: error: use of undeclared identifier 'dwarf_location_atom'
head = new_loc_descr( ( dwarf_location_atom)( cfa->reg + 112), cfa->base_offset, 0LL); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_cfa_loc/src/dwarf2out.c:3405:25: error: use of undeclared identifier 'dwarf_location_atom'
head = new_loc_descr( ( dwarf_location_atom)( cfa->reg + 80), 0LL, 0LL); 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/build_cfa_loc/src/obj/dwarf2out.o] Error 1
